@@ -1,0 +1,3 @@
+GFXINC += $(GFXLIB)/drivers/gdisp/SSD1312
+GFXSRC += $(GFXLIB)/drivers/gdisp/SSD1312/gdisp_lld_SSD1312.c
+
