@@ -32,6 +32,7 @@ FEATURE:    Add cmake support
 FIX:        Add missing driver.mk to SSD1322 driver.
 FEATURE:    LGDP4532 driver improvements.
 FIX:        Win32 Keyboard driver now retrieves lock key states on window activate
+FEATURE:    Add SSD1312 GDISP driver
 
 
 *** Release 2.9 ***
